--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.0-rc-84'
-    ext.architecture_components_version = '1.0.0'
+    ext.kotlin_version = '1.2.30'
+    ext.architecture_components_version = '1.1.0'
     repositories {
         google()
         jcenter()
-        maven {
-            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
-        }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -24,9 +22,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
-        maven {
-            url "http://dl.bintray.com/kotlin/kotlin-eap-1.2"
-        }
     }
 }
 
