--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -41,7 +40,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     // PreferenceFragmentCompat (because we use android.support.v4.app.Fragment)
     implementation 'com.android.support:preference-v7:26.1.0'
-    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:design:26.1.0'
 
     // Architecture Components
@@ -52,7 +51,7 @@ dependencies {
 
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
 
     //Dagger
     implementation 'com.google.dagger:dagger:2.11'
