--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.qase.android.appskeletondemo"
         minSdkVersion 16
@@ -27,21 +27,21 @@ kapt {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':skeleton')
 
 
 
-    implementation "com.android.support:support-core-utils:26.1.0"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:support-core-utils:27.1.1"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     // PreferenceFragmentCompat (because we use android.support.v4.app.Fragment)
-    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.android.support:preference-v7:27.1.1'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:27.1.1'
 
     // Architecture Components
     implementation "android.arch.lifecycle:runtime:$architecture_components_version"
