--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -46,13 +46,16 @@ dependencies {
 
     implementation 'com.android.support:design:27.1.1'
 
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Architecture Components
     implementation "android.arch.lifecycle:runtime:$architecture_components_version"
     implementation "android.arch.lifecycle:extensions:$architecture_components_version"
     kapt "android.arch.lifecycle:compiler:$architecture_components_version"
+
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
 }
 
 repositories {
