--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -45,24 +45,24 @@ dependencies {
 //    implementation 'com.android.support:preference-v7:27.1.1'
 
 //    implementation 'com.android.support:design:27.1.1'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
-    implementation 'androidx.fragment:fragment:1.1.0-beta01'
-    implementation 'androidx.preference:preference:1.1.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'androidx.fragment:fragment:1.2.0-rc01'
+    implementation 'androidx.preference:preference:1.1.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Architecture Components
-    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0-alpha01"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc02"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc02"
 
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
 }
 
 repositories {
